# c-primier-plus

./: .gitignore  CMakeLists.txt  library.h
chap10/: 10.1.day_mon1.c  10.10.sum_arr1.c  10.11.sum_arr2.c  10.12.order.c  10.13.ptr.ops.c  10.14.arf.c  10.15.zippo1.c  10.16.zippo2.c  10.17.array2d.c  10.18.vararr2d.c  10.5.designate.c  10.6.bounds.c  10.8.pnt_add.c  10.9.day_mon3.c  10.9.test.c
chap4/: 4.1.c  4.2.c  4.3.c
chap9/: 9.1.lethead1.c  9.10.hotel.c  9.12.loccheck.c  9.13.swap1.c  9.13.swap3.c  9.2.lethead2.c  9.3.lesser.c  9.6.recur.c  9.7.factor.c  9.8.binary.c  9.9.usehotel.c  hotel.c  hotel.h  usehotel.c
